Fixed gradle to allow for a (nearly) runnable JAR on Linux